# pybound_px4_libraries

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
filter/: second_order_reference_model.hpp
lib/mathlib/math/: Functions.hpp
lib/mathlib/math/filter/: second_order_reference_model.hpp
lib/npfg/: npfg.cpp  npfg.hpp
matrix/: math.hpp
px4_platform_common/: defines.h  log.h
pybindings/: mathlib_bindings.cpp  npfg_bindings.cpp  pybindings.cpp
src/: pybindings.cpp
tests/: second_order_reference_model_discretization_method_test.py  second_order_reference_model_rate_feedback_test.py  second_order_reference_model_test.py
visualization/: npfg_bearing_map.py
